# space-impact

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
godot/: export_presets.cfg  game_of_life.gd  game_of_life.gd.uid  game_of_life.tscn  main.gd  main.gd.uid  project.godot
rust/: Cargo.toml
rust/src/: flecs_ecs.rs  game_of_life.rs  golrust.rs  golrustflecs.rs  lib.rs
src/: main.cpp  resources.rc
src/core/: AppContext.h  Renderer.h
src/core/scene/: Events.h  Manager.cpp  Manager.h  Scene.h
src/core/ui/: core_ui_rmlui.cpp  core_ui_rmlui.h
src/core/utils/image/: Texture.cpp  Texture.h
src/ecs/components/: components_core.h  components_space_impact.h
src/ecs/systems/: systems_core.h  systems_space_impact.h
src/game/: Components.h  Mode.h
src/scenes/: GameScene.cpp  GameScene.h  IntroScene.cpp  IntroScene.h  MainMenuScene.cpp  MainMenuScene.h  ScreenManager.h  SplashScene.cpp  SplashScene.h
