[package]
name = "rust"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
flecs_ecs = "0.1.3"
godot = "0"
rand = "0.9.1"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
