[package]
name = "rust"
version = "1.0.0"
edition = "2024"
license = "MIT"


[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
flecs_ecs = "0.2.2"
godot = "0.4.3"
rand = "0.9.2"
